# transformer-circuits

./: README.md  causal_trace.ipynb  colab_setup.sh  environment.yml  pyproject.toml  requirements.txt  setup.sh
notebooks/: Activation Grafting.ipynb  Addition.ipynb  CountingCircuit.ipynb  Exploratory_Analysis_Demo_(2).ipynb  Fact_Circuit.ipynb  HydraEffect  HydraEffectRunAll.ipynb  HydraEffectSameHeads.ipynb  HydraEffectSameHeadsGPT.ipynb  HydraEffectSameHeadsReproduce.ipynb  HydraResults.ipynb  LoRA_Fact_Editting.ipynb  LocatingFacts.ipynb  MoverHeads.ipynb  ResorationResult.ipynb  Restoration Effect.ipynb  SequenceCircuit.ipynb  SymmetricFacts.ipynb  Total_Effect_vs_Direct_Effect.ipynb  addition.py  format_data.ipynb  plot_functions.ipynb
notebooks/data/: bijective_facts.csv  fact_dataset.json  sequence_dataset.pickle  three_item_prompts.csv
notebooks/results/: 0-1_single_patching_restoration_results.pickle  0-99_results.pickle  100-199_results.pickle  200-299_results.pickle  300-399_results.pickle  400-499_results.pickle  500-599_results.pickle  600-699_results.pickle  700-799_results.pickle  800-899_results.pickle
notebooks_ref/: Exploratory_Analysis_Demo.ipynb  LLaMA.ipynb  Main_Demo.ipynb  SVD_Interpreter_Demo.ipynb
src/: lora.py
