[tool.poetry]
name = "transformer-circuits"
version = "0.1.0"
description = "Project exploring transformer circuits, notably circuits involved during LoRA finetuning."
authors = ["Theo Janson <tj@sfjtechnologies.com>"]
readme = "README.md"
packages = [{include = "transformer_circuits"}]

[tool.poetry.dependencies]
python = "^3.9"
easy-transformer = {git = "https://github.com/redwoodresearch/Easy-Transformer.git"}
transformer-lens = {git = "https://github.com/neelnanda-io/TransformerLens"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
