[tool.poetry]
name = "transformer-circuits"
version = "0.1.0"
description = "Project exploring transformer circuits, notably circuits involved during LoRA finetuning."
authors = ["Theo Janson <tj@sfjtechnologies.com>"]
readme = "README.md"
packages = [{include = "transformer_circuits"}]

[tool.poetry.dependencies]
python = "^3.9"
easy-transformer = {git = "https://github.com/redwoodresearch/Easy-Transformer.git"}
transformer-lens = {git = "https://github.com/neelnanda-io/TransformerLens"}
torch = "^2.0.1"
einops = "^0.6.1"
fancy-einsum = "^0.0.3"
plotly = "^5.15.0"
jaxtyping = "^0.2.20"
transformers = "^4.30.2"
datasets = "^2.13.1"
bitsandbytes = "^0.40.2"
loralib = "^0.1.1"
accelerate = "^0.21.0"
peft = {git = "https://github.com/huggingface/peft.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
